[gd_scene load_steps=10 format=2]

[ext_resource path="res://common/stats_manager.gd" type="Script" id=1]
[ext_resource path="res://characters/states/health_states/freezing.gd" type="Script" id=2]
[ext_resource path="res://characters/states/health_states/health_states_manager.gd" type="Script" id=3]
[ext_resource path="res://characters/states/health_states/poisoning.gd" type="Script" id=4]
[ext_resource path="res://characters/states/health_states/burning.gd" type="Script" id=5]
[ext_resource path="res://characters/states/health_states/lightning_shocking.gd" type="Script" id=6]
[ext_resource path="res://characters/stats/buff_manager.gd" type="Script" id=7]
[ext_resource path="res://characters/states/health_states/antidoting.gd" type="Script" id=8]
[ext_resource path="res://characters/states/health_states/unfreezing.gd" type="Script" id=9]

[node name="StatsManager" type="Node2D"]
script = ExtResource( 1 )

[node name="HealthStatesManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="freezing" type="Node" parent="HealthStatesManager"]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="HealthStatesManager/freezing"]
one_shot = true

[node name="burning" type="Node" parent="HealthStatesManager"]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="HealthStatesManager/burning"]
one_shot = true

[node name="unfreezing" type="Node" parent="HealthStatesManager"]
script = ExtResource( 9 )

[node name="Timer" type="Timer" parent="HealthStatesManager/unfreezing"]
one_shot = true

[node name="antidoting" type="Node" parent="HealthStatesManager"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="HealthStatesManager/antidoting"]
one_shot = true

[node name="lightning_shocking" type="Node" parent="HealthStatesManager"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="HealthStatesManager/lightning_shocking"]
one_shot = true

[node name="poisoning" type="Node" parent="HealthStatesManager"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="HealthStatesManager/poisoning"]
one_shot = true

[node name="PoisonTimer" type="Timer" parent="HealthStatesManager/poisoning"]

[node name="BuffManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="."]
